Manage categories screen with all functionality done

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "^3.21.0",
     "react-native-svg": "12.1.1",
     "react-redux": "^8.1.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +35,8 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.195",
+    "@types/shortid": "^0.0.29",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
