--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@bambooapp/bamboo-molecules": "^0.1.62",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "expo-asset": "^8.9.1",
+    "expo-constants": "^14.2.1",
+    "expo-font": "^11.1.1",
+    "expo-modules-core": "^1.2.7",
     "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
